--- a/sites/all/themes/tpg_theme/sass/components/page-elements/_whats-on.scss
+++ b/sites/all/themes/tpg_theme/sass/components/page-elements/_whats-on.scss
@@ -137,7 +137,7 @@
     @include rem(margin-bottom, 5px);
     color: color(main);
     font-weight: bold;
-    letter-spacing: 1px;
+    letter-spacing: .8px;
     min-height: auto;
     padding-left: 0;
     padding-right: 0;
